# cs-sdl

./: NEWS  README  SdlDotNet.sln
Arcane/: .classpath  pom.xml
MWSPlay/: .project
MagicTraders/: jar.jardesc
Mezzanine/: CREDITS.txt  LICENSE.txt  Mezzanine.sln  mezzanine.bat  server.bat
SDLDotNet/: .cvsignore  AssemblyInfo.cs  CDAudio.cs  CDDrive.cs  CREDITS  Color.cs  Events.cs  INSTALL  Joystick.cs  Joysticks.cs  NEWS  Natives.cs  README  SDL-2k3.csproj  SDL.NET.2k3.sln  SDL.NET.build  SDL.NET.ndoc  SDL.NET.sln  SDL.cs  SDL.csproj  SDLAll.NET.csproj  SdlDotNet.build  SdlDotNet.dnpb  SdlDotNet.sln  Surface.cs  TODO  Video.cs  WindowManager.cs  prebuild.xml  sdldotnet.ndoc
SDLImageDotNet/: .cvsignore  ImageList.cs  Natives.cs  SDL.Image.NET.ndoc  SDL.Image.NET.sln  SDL.Image.csproj  SDLImage.NET.csproj  SDLImage.cs  SDLImage.sln  SDLImageException.cs
SDLTTFDotNet/: .cvsignore  CHANGES  Font.cs  Makefile  README  SDL.TTF.NET.build  SDL.TTF.NET.sln  SDL.TTF.csproj  SDLTTF.NET.2k3.csproj  SDLTTF.cs  SDLTTFException.cs
SdlDotNet/: .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  NEWS.txt  README  SdlDotNet.build  SdlDotNet.sln  autotools.bat  autotools.sh  build-debug.bat  build-debug.sh  build.sh  buildmono.bat  configure.ac  nant.bat  nant.sh  nantfiles.bat  nantfiles.sh  package-debug.bat  package-debug.sh  package.bat  package.sh  package.xml  package2.bat  package2.sh  (+6 more)
TaoSdl/examples/: Makefile.am
trunk/TaoSdl/src/: Makefile.am
trunk/TaoSdl/src/Tao.Platform.Windows/: Wgl.cs  WglDelegates.cs  WglEnums.cs
trunk/TaoSdl/src/Tao.Sdl/: Tao.Sdl.build  Tao.Sdl.csproj
(+5893 files in other folders)
