
SUBDIRS = CgExamples \
          DevIlExamples \
          FFmpegExamples \
          FreeGlutExamples \
          GeWangExamples \
          GlfwExamples \
          LuaFunctions \
          LuaSimple \
          FtGlSimple \
          FtGlScrolling \
          NateRobins \
          NeHe \
          OdeExamples \
          OpenAlExamples \
          PhysFsExamples \
          Redbook \
          SdlExamples
